2013-11-06  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* Makefile.in: Fix problems accessing xidepend when configured with a
	(discouraged) relative path to source directory.

2013-08-23  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* new-features.xml (ov-new1.7.25): Change wording.

2013-08-23  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.25): Add new section.

2013-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.24): Add new section.  Mention
	posix_memalign override.

2013-07-26  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* new-features.xml (ov-new1.7.23): Add new section.  Mention wincmdln.
	* cygwinenv.xml: Mention wincmdln.

2013-07-25  Corinna Vinschen  <corinna@vinschen.de>

	* gcc.xml (gcc-64): Fix example.

2013-07-25  Corinna Vinschen  <corinna@vinschen.de>

	* gcc.xml (gcc-default: Rename from gcc-cons.  Change title.
	(gcc-64): New section explaininig differences in programming for
	64 bit Cygwin.
	(gcc-gui): Simplify description and aim at UNIX/Linux developers only.
	Note that X programming is preferred.  Drop example.

2013-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.22): Add GetCommandLine and regcomp
	changes.

2013-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygwin-ug-net/cygwin-ug-net.html): Add dependency to
	cygwin.xsl.
	(cygwin-api/cygwin-api.html): Ditto.
	(cygwin-ug-net/cygwin-ug-net.pdf): Add dependency to fo.xsl.
	(cygwin-api/cygwin-api.pdf): Ditto.
	(cygwin-api.xml): Drop "." path component from doctool dependency.
	Change Makefile to Makefile.in dep.
	(doctool): Drop "." path component from target.

2013-07-20  Warren Young  <warren@etr-usa.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygwin-ug-net/cygwin-ug-net.pdf): Process input via
	xsltproc and fop.
	(cygwin-api/cygwin-api.pdf): Ditto.
	* fo.xsl: New file.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>
